Bug 328257 - Diagram popup menu not displayed at cursor position
Summary: Diagram popup menu not displayed at cursor position
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.0
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-30 18:20 UTC by Ralf Habacker
Modified: 2014-01-22 20:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-11-30 18:20:15 UTC
In some cases it happens that a right click on a diagram let display the related context menu not at the cursor position. Instead it is displayed in the top left corner of the application. On windows this happens on every second click, on linux only sometimes. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. right click on the diagram background
Actual Results:  
Popup menu is not opened on the cursor position as described in the bug details

Expected Results:  
The popup menu should open always at the cursor position.
Comment 1 Ralf Habacker 2013-11-30 18:25:39 UTC
Git commit 362c2a36fcdd4b2649b3905081552352d7ee1a4c by Ralf Habacker.
Committed on 30/11/2013 at 18:20.
Pushed by habacker into branch 'master'.

Fix of 'Diagram popup menu not displayed at cursor position'.

The problem has been caused by handling the diagram context menu on
two source code locations, which results into a race condition.

M  +0    -2    umbrello/toolbarstatearrow.cpp

http://commits.kde.org/umbrello/362c2a36fcdd4b2649b3905081552352d7ee1a4c
Comment 2 Ralf Habacker 2013-11-30 21:28:15 UTC
Git commit 60614d07fa154b9563e64aa1a4deedef12f4383a by Ralf Habacker.
Committed on 30/11/2013 at 18:20.
Pushed by habacker into branch 'KDE/4.12'.

Fix of 'Diagram popup menu not displayed at cursor position'.

The problem has been caused by handling the diagram context menu on
two source code locations, which results into a race condition.
(cherry picked from commit 362c2a36fcdd4b2649b3905081552352d7ee1a4c)

M  +0    -2    umbrello/toolbarstatearrow.cpp

http://commits.kde.org/umbrello/60614d07fa154b9563e64aa1a4deedef12f4383a
Comment 3 Ralf Habacker 2013-11-30 21:29:29 UTC
Git commit 51b3164ec8d61d6d9eb796157f4d5a3075e073a3 by Ralf Habacker.
Committed on 30/11/2013 at 18:20.
Pushed by habacker into branch 'KDE/4.11'.

Fix of 'Diagram popup menu not displayed at cursor position'.

The problem has been caused by handling the diagram context menu on
two source code locations, which results into a race condition.
FIXED-IN:4.11.5
(cherry picked from commit 362c2a36fcdd4b2649b3905081552352d7ee1a4c)

M  +0    -2    umbrello/toolbarstatearrow.cpp

http://commits.kde.org/umbrello/51b3164ec8d61d6d9eb796157f4d5a3075e073a3
Comment 4 Christoph Feck 2013-12-28 01:27:26 UTC
Setting two versions in "Version Fixed In" field prevents it from showing up in bugzilla searches when searching for fixes made for a specific KDE version (applies to some other bug reports, too).

Since KDE 4.11.5 will be released before KDE 4.12.1, I suggest to simply use "4.11.5" as the version.