Fix of 'Diagram popup menu not displayed at cursor position'.

The problem has been caused by handling the diagram context menu on
two source code locations, which results into a race condition.

BUG:328257